--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
         <div class="tap-to-open" id="tapInstruction">
             <p><i class="fas fa-hand-point-up"></i> Open the magical envelope!</p>
             <div class="controls">
-                <label class="control-label"><input id="enableHaptics" type="checkbox"> Enable sound & haptics</label>
+                <label class="control-label"><input id="enableHaptics" type="checkbox"> ...</label>
             </div>
         </div>
     </div>
@@ -842,7 +842,7 @@
                 <p>Shyam Always help you for achieving Your future goals ☺️💞,, Dhyan rakh,🫶</p>
             </div>
             
-            <div class="signature">- Himanshu Papa...</div>
+            <div class="signature">- Goswami ji...</div>
         </div>
 
         <div class="footer">
